--- a/History
+++ b/History
@@ -1,1 +1,12 @@
+我们的项目是一个基于Java开发的健康管理系统，旨在为用户提供全面而便捷的健康管理服务。通过结合健康问答、用户注册和登录，以及BMI计算等功能，我们致力于提供定制化的健康咨询和信息。
+  
+该系统利用Java编程语言开发，具有灵活性和可扩展性。我们引用了ChatGPT大模型，这是一种先进的自然语言处理模型，能够实现问答功能，并为用户提供精准的健康建议。
 
+项目的主要功能包括：  
+1.健康问答：用户可以提出与健康相关的问题，并获得系统根据ChatGPT大模型生成的智能回答和建议，从而满足用户的个性化需求。  
+2.用户注册和登录：用户可以通过注册账号并登录系统，以便享受更多个性化的健康管理服务。注册过程简单明了，登录后用户可以记录个人健康数据  
+3.BMI计算：系统提供了简便的BMI（身体质量指数）计算功能，用户只需输入身高和体重信息，系统便会根据输入数据计算并给出相应的健康评价及建议。  
+
+我们的项目旨在帮助用户实现更好的健康管理，并提供个性化的健康咨询和建议。通过引入ChatGPT大模型的智能问答功能，我们致力于为用户提供精准、实用的健康信息，使用户能够根据自身情况调整生活方式、改善健康状况。  
+  
+通过这个健康管理系统，我们希望能够激发用户对健康的重视，并为他们提供方便、准确和个性化的健康管理服务，帮助他们实现身心健康的目标。  
